--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,14 @@
 			<version>1.2</version>
 		</dependency>
 
+				<!-- src/main/webapp/WEB-INF/views -->
+		<!-- https://mvnrepository.com/artifact/org.apache.tomcat/tomcat-jasper -->
+		<dependency>
+			<groupId>org.apache.tomcat</groupId>
+			<artifactId>tomcat-jasper</artifactId>
+			<version>9.0.52</version>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
